# FDS_Kaggle_Competition

./: .gitignore  BONANNI_SACCOL_VULPIANI.ipynb  README.md  backup_stacking_final.py  battle_5_features.json  bucket_results.txt  correlation.json  data.types.txt  data_sample.json  feature_engineering.py  features2.md  features_list.json  features_list_model83.89.json  features_utils.py  final_consegna.py  main.py  model_stacking.py  models_comparison.py  monitoring.py  pyproject.toml  reading.py  scelta_feature.py  stacking.ipynb  stacking_final.py  start.ipynb  start.py  start_feature_list.txt  start_mutual_info.ipynb  start_utils.py  start_utils2 copy.ipynb  train.py  train_df_head.json  train_regularization.txtOLD  train_sample.json
Other_attempts/: scelta_feature.py  start2.py  start_mutual_info.ipynb  start_utils.py  start_utils2.ipynb  start_utils2.py
Other_attempts/notebooks/: main2.ipynb
input/fds-pokemon-battles-prediction-2025/: test.txt
notebooks/: main.ipynb  main2.ipynb  start.ipynb  submission.csv
notebooks/utils/: model.py  schema.py  type_effects.py
